# win_console

./: .gitignore  README.md  app.py  build.bat  build_client.bat  build_server.bat  pyproject.toml  requirements.txt
.trae/specs/add-camera-disk-file-features/: checklist.md  spec.md  tasks.md
.trae/specs/build-server-client-architecture/: checklist.md  spec.md  tasks.md
client/: core.py  installer.py  main.py  requirements.txt
client/handlers/: __init__.py  camera.py  disk.py  file_manager.py  file_transfer.py  keyboard.py  keylog.py  mouse.py  process.py  screen_stream.py  screenshot.py  system_info.py  terminal.py
common/: __init__.py  config.py  crypto.py  protocol.py
server/: app.py  auth.py  client_manager.py  config_store.py  main.py  requirements.txt
server/api/: dashboard.py  devices.py  events.py  groups.py  remote.py  settings.py
templates/: index.html
