[project]
name = "winconsole"
version = "1.0.0"
description = "远程控制管理平台 - 基于 C/S 架构的多设备集中管理工具"
authors = [{ name = "moyefu" }]
license = { text = "MIT" }
requires-python = ">=3.7"

dependencies = [
    "websockets>=11.0",
    "psutil>=5.8",
    "pillow>=8.0",
    "cryptography>=41.0",
    "pyinstaller>=5.0",
]

[project.optional-dependencies]
server = [
    "flask>=2.0",
    "flask-sock>=0.7.0",
    "pystray>=0.19",
]
client = [
    "pyautogui>=0.9.53",
    "pynput>=1.7",
    "pywinpty>=0.15; platform_system == 'Windows'",
    "opencv-python>=4.5",
    "numpy>=1.20",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "server*", "client*"]

[tool.setuptools.package-data]
templates = ["*.html"]
